# mancalamax

./: .gitignore  CMakeLists.txt  LICENSE  README.md
mancala/: main.c  minimax.c  minimax.h  state.c  state.h
utils/: LinkedList.c  LinkedList.h
